--- a/Components/origin.css
+++ b/Components/origin.css
@@ -8,18 +8,89 @@
     --sg-color: #0c8ff9;
     --test-color: #000;
     --side-l-color: #000;
-  }
+    --gry-color: gray;
+    --product-color: #343a40;
+    --product-p-color: gray;
+}
 body{
     background: var(--bg-color);
     margin: 0px;
     padding: 0px;
+    transition: 1s ease-in-out;
 }
 a{
     text-decoration: none;
 }
-#HomePage,#AboutPage,#ProjectPage,#HelpPage,#SearchPage,#AccountPage{
+#HomePage,#AboutPage,#ApiPage,#HelpPage,#SearchPage,#AccountPage{
     display: none;
     width: 100%;
+}
+#loading{
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 99;
+	background: var(--test-color);
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	color: var(--nvtxt-color);
+	position: fixed;
+	cursor: progress;
+}
+#loading .head{
+	margin-top: 10%;
+	font-size: 35px;
+	font-weight: bold;
+	font-family: sans-serif;
+	color: var(--ngtxt-color);
+}
+#loading footer{
+	width: 100%;
+	position: absolute;
+	bottom: 2%;
+	left: 0;
+	text-align: center;
+    background: transparent;
+}
+#loading footer h6{
+	margin-bottom: 4px;
+	font-size: 16px;
+}
+#loading footer h5{
+	color: red;
+	font-size: 20px;
+	margin: 2px 0px;
+}
+.loader{
+  	display: flex;
+  	justify-content: space-around;
+  	margin: 10px calc((100% - 70px)/2);
+}
+.dot{
+    width: 10px;
+    height: 10px;
+    margin: 0 5px;
+    border-radius: 50%;
+    background: var(--nv-color);
+    animation: blinkAnimation 3s linear infinite;
+}
+.dot:nth-child(1){
+    animation-delay: 0s;
+}
+.dot:nth-child(2){
+    animation-delay: 1s;
+}
+.dot:nth-child(3){
+    animation-delay: 2s;
+}
+@keyframes blinkAnimation{
+    0%, 100%{
+    	background-color: var(--nv-color);
+    }5%{
+        background-color: var(--ngtxt-color);
+    }
 }
 header{
     display: flex;
@@ -30,9 +101,13 @@ header{
     height: auto;
     color: var(--nvtxt-color);
     padding: 8px 0px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    transition: 2s ease-in-out;
 }
 .hameburger,.downMenu{
     display: none;
+    transition: 1s ease-in-out;
 }
 .hameburger{
     border: 2px solid var(--wtxt-color);
@@ -119,7 +194,7 @@ header{
 .right_search .search-control,.middle_search .search-control{
     font-size: 14px;
     border-radius: 8px;
-    border: 2px solid #000;
+    border: 1px solid #000;
     outline: none;
     padding: 10px 12px;
     margin-right: 8px;
@@ -138,7 +213,7 @@ header{
 }
 .right_search .btn:hover,.middle_search .btn:hover{
     color: #fff;
-    background: blue;
+    background: aqua;
 }
 .middle_search .search-control,.middle_search .btn{
     padding: 8px 6px;
@@ -164,16 +239,16 @@ header{
     text-align: center;
     margin-bottom: 5px;
 }
-#HomePage{
+#HomePage,#ApiPage{
     width: 100%;
     padding: 20px auto;
     text-align: center;
     font-family: sans-serif;
-    margin-bottom: 140px;
+    margin-bottom: 80px;
     color: var(--wtxt-color);
 }
 section h1{
-    margin-top: 150px;
+    margin-top: 100px;
     color: grey;
     font-size: 38px;
 }
@@ -185,6 +260,7 @@ section p{
 section .welbtn{
     width: 50%;
     margin: auto calc((100% - 50%)/2);
+    margin-bottom: 15px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -227,6 +303,9 @@ footer{
     width: 100%;
     padding: 40px 0 0 0;
     color: var(--nvtxt-color);
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+    transition: 2s ease-in-out;
 }
 .footer{
     display: flex;
@@ -241,7 +320,7 @@ footer{
     font-size: 18px;
     padding: 2px 40px;
     text-align: justify;
-    color: grey;
+    color: var(--gry-color);
 }
 .socials{
     list-style: none;
@@ -273,8 +352,8 @@ footer{
     background: var(--nv-color);
     width: 100vw;
     padding: 10px 20px 10px 20px;
-    border-top: 2px solid grey;
-    color: grey;
+    border-top: 2px solid var(--gry-color);
+    color: var(--gry-color);
 }
 .footer-copyright p{
     font-size: 14px;
@@ -413,7 +492,7 @@ ul{
     from{ 
         width: 0px; 
     }to{ 
-        width: 25%; 
+        width: 30%; 
     }
 }
 @keyframes blink-caret{
@@ -448,7 +527,182 @@ ul{
         transform: translateX(180px);
     }
 }
+.searchBox{
+    margin: 20px 0px;
+    width: 100%;
+    background-color: transparent;
+    text-align: center;
+}
+.searchBar{
+    display: flex;
+    flex-direction: row;
+    width: 50%;
+    margin: 0px 25%;
+    background-color: transparent;
+}
+.searchSelect,.searchIcon{
+    width: 10%;
+    padding: 6px 0px;
+}
+.searchSelect{
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    background-color: #e3e1e1;
+    color: #3B1540;
+    border: 1px solid #000;
+}
+.searchSelect select{
+    outline: none;
+    border: none;
+    background-color: transparent;
+    font-size: 15px;
+    width: 100%;
+    cursor: pointer;
+}
+.searchText{
+    width: 80%;
+    border: 1px solid #000;
+    border-radius: 0px;
+}
+.searchText input{
+    outline: none;
+    width: 100%;
+    height: 100%;
+    padding: 2px 8px;
+    border: none;
+}
+.searchIcon{
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    background: linear-gradient(47deg, #0c8ff0, #f6f6f6);;
+    border: 1px solid #000;
+    cursor: pointer;
+}
+.search-product-data,.search-user-data{
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 0%;
+}
+.drop,.drops{
+    width: 30%;
+    margin: 0px;
+    display: list-item;
+}
+.product{
+    width: 100%;
+    margin: 20px auto;
+    background: var(--product-color);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    transition: 2s ease-in-out;
+}
+.product:hover{
+    cursor: pointer;
+    box-shadow: 0px 0px 10px 2px #b7d2ee;
+    transform: translateY(-10px);
+}
+.product-component-top{
+    margin: 0%;
+    width: 100%;
+    height: 100px;
+    border-radius: 10px;
+    overflow: hidden;
+    background: url('../img/Api-thumbnail003.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.product-component-top .product-price{
+    width: 90px;
+    height: 24px;
+    padding: 2px 4px;
+    border-radius: 8px;
+    color: var(--wtxt-color);
+    font-size: 14px;
+    font-family: sans-serif;
+    background: var(--bg-color);
+    position: relative;
+    top: 10px;
+    left: 75%;
+    transition: 2s ease-in-out;
+}
+.product-component-middle{
+    margin: 0%;
+    width: 100%;
+    height: 50%;
+    padding: 8px 10px;
+    padding-bottom: 2px;
+}
+.product-component-middle .product-headline{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.product-component-middle .product-headline .product-dp{
+    font-weight: bold;
+    width: 20px;
+    height: 20px;
+    margin: auto 0px;
+    font-size: 14px;
+    background: violet;
+    border-radius: 50%;
+    color: var(--wtxt-color);
+}
+.product-component-middle .product-headline .product-head{
+    font-weight: bold;
+    font-size: 16px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: var(--wtxt-color);
+    width: 90%;
+    height: 28px;
+    max-height: 28px;
+    text-align: left;
+    margin: auto 0px;
+    overflow: hidden;
+}
+.product-component-middle .product-description{
+    font-size: 14px;
+    text-align: justify;
+    color: var(--product-p-color);
+    font-family: sans-serif;
+    height: calc(14px * 6);
+    max-height: calc(14px * 6);
+    overflow: hidden;
+}
+.product-component-middle .product-owner{
+    width: 100%;
+    text-align: left;
+    color: var(--blink-color);
+    font-family: sans-serif;
+    margin: 4px;
+}
+.product-component-bottom{
+    margin: 0%;
+    width: 100%;
+    height: 20%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 5px 0px;
+    padding-top: 2px;
+    font-size: 16px;
+    font-family: Consolas, 'Courier New', monospace;
+}
+.product-component-bottom .product-info{
+    margin: 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.product-component-bottom .product-info i{
+    margin: auto 4px;
+}
 @media only screen and (max-width: 900px){
+    #loading .head{
+        margin-top: 45%;
+    }
     .logo{
         font-size: 16px;
     }
@@ -584,5 +838,44 @@ ul{
     }
     .footer p{
         font-size: 14px;
+    }
+    .searchBar{
+        width: 90%;
+        margin: 0px 5%;
+    }
+    .searchSelect select{
+        font-size: 12px;
+    }
+    .searchSelect,.searchIcon{
+        width: 12%;
+        margin: 0px;
+    }
+    .searchText{
+        width: 76%;
+        margin: 0px;
+    }
+    .search-product-data{
+        margin: auto 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        padding: 0%;
+    }
+    .drop{
+        width: 100%;
+    }
+    .product{
+        width: 90%;
+        margin: 20px 5%;
+    }
+    .product-component-middle .product-headline,.product-component-middle .product-description{
+        margin: 0px;
+        width: 100%;
+    }
+    .product-component-top .product-price{
+        position: relative;
+        top: 2px;
+        left: 60%;
     }
 }
