--- a/Components/origin.css
+++ b/Components/origin.css
@@ -733,7 +733,7 @@ ul{
     text-align: justify;
 }
 #HelpPage .searchBox{
-    background: url('../img/banner2.png');
+    background: url('../img/Helpbanner.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
